<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tour.AddTourFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

    <EditText
        android:id="@+id/countryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/country_name"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp">
    </EditText>


    <EditText
        android:id="@+id/placeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/enter_place_name"
        android:inputType="textPassword"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="11dp"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/start_date"
            android:inputType="datetime">
        </EditText>

        <EditText
            android:id="@+id/endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/end_date"
            android:inputType="datetime" />
    </LinearLayout>

    <EditText
        android:id="@+id/placeDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/enter_place_description"
        android:inputType="textPassword"
        android:paddingBottom="20dp" />

    <Button
        android:id="@+id/chooseImageBtn"
        android:layout_height="55dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/teal_700"
        android:enabled="true"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/choose_image"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/placeImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:enabled="true"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:text="@string/upload"
        android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>